// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Card GridCard renders 1`] = `
<Fragment>
  <h2
    id="card-with-grid"
  >
    Card with grid
  </h2>
  <p>
    Use our 
    <Link
      to="/docs/core/grid"
    />
     along with cards to control their size and how they are displayed on different screen resolutions. Make sure to add 
    <Property
      value=".d-flex"
    />
     to the wrapping container if you want the cards to be of equal height when next to each other.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-6 col-xl-4 d-flex"
      >
        <Card
          bodyClass="d-flex flex-column"
          btn={true}
          btnClass="btn-block mt-auto"
          smallText="Small card text"
          text="Card text"
          title={
            <h3>
              My Custom card
            </h3>
          }
          type="primary"
        >
          <MediaObject
            heading="75%"
            icon="verified_user"
            muted={true}
            size="sm"
            text="Complete"
            textSmall={true}
          />
        </Card>
      </div>
      <div
        className="col-12 col-lg-6 col-xl-4 d-flex"
      >
        <Card
          bodyClass="d-flex flex-column"
          btn={true}
          btnClass="btn-block mt-auto"
          smallText="This is some small text"
          textSection={
            Array [
              "This is a lot of text",
              "With some more text",
              "And then even some more",
              "Is it really possible to have this much text in one card?",
              "Yes!",
            ]
          }
          title={
            <h3>
              Text card
            </h3>
          }
          type="primary"
        />
      </div>
      <div
        className="col-12 col-lg-6 col-xl-4 d-flex"
      >
        <Card
          footerLinkTxt="Footer link"
          imgSrc="https://picsum.photos/300/?random"
          text="This is a card with an image and body"
          title={
            <h3>
              Image card
            </h3>
          }
          type="secondary"
        />
      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Card Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    We offer three different card variants; 
    <Property
      value=".card-primary"
    />
    , 
    <Property
      value=".card-secondary"
    />
     and 
    <Property
      value=".card-plain"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="row"
    >
      <Card
        imgSrc="https://picsum.photos/300/?random"
        text="This paragraph contains some text about the person displayed above."
        title={
          <MediaObject
            heading="Bob Corlsan"
            icon="account_circle"
            size="sm"
            text="bob.corlsan@payex.com"
            textSmall={true}
          />
        }
        type="primary"
      >
        <ul
          className="list"
        >
          <li>
            <span
              className="font-weight-bold"
            >
              Card number:
            </span>
             4563 5648 5642
          </li>
          <li>
            <span
              className="font-weight-bold"
            >
              Balance:
            </span>
             2500,- 
          </li>
        </ul>
      </Card>
      <Card
        footerLinkTxt="Footer link"
        text="Descriptive text to put inside the card, could contain a lot."
        title={
          <h3>
            Card secondary
          </h3>
        }
        type="secondary"
      >
        <MediaObject
          heading="725 NOK"
          icon="account_balance"
          muted={true}
          size="sm"
          text="Outstanding balance"
          textSmall={true}
        />
      </Card>
      <Card
        footerLinkTxt="Footer link"
        imgSrc="https://picsum.photos/300/?random"
        text="Descriptive text to put inside the card, could contain a lot."
        title={
          <h3>
            Card plain
          </h3>
        }
        type="plain"
      >
        <MediaObject
          heading="75%"
          icon="verified_user"
          muted={true}
          size="sm"
          text="Complete"
          textSmall={true}
        />
      </Card>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Card renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Card is a flexible container taking up the entire width of its parent element. It contains different sections like headers, footers, images and more.
  </p>
  <Overview />
  <GridCard />
</DocContainer>
`;
